# lichessbot

./: .gitignore  Cargo.toml  ReadMe.md
examples/: example.rs
meta/: gen.py
src/: example.rs  lib.rs  lichessbot.rs
