[package]
name = "lichessbot"
version = "0.1.3"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["lichess", "bot"]
description = "Lichess bot. Under construction."
license = "MIT"
repository = "https://github.com/hyperchessbot/lichessbot"
homepage = "https://github.com/hyperchessbot/lichessbot#lichessbot"
documentation = "https://docs.rs/lichessbot/0.1.3"
readme = "ReadMe.md"

[dependencies]
bytes = "1.0.1"
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
futures-util = "0.3.9"
licoricedev = "0.1.0"

[dependencies.tokio]
version = "1.0.1"
features = ["full"]

[[bin]]
name = "example"
path = "src/example.rs"

[lib]
path = "src/lib.rs"
